Deployments/unode-deployments/unode-backend/unode-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unode-backend
  namespace: default
  labels:
    app: unode-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unode-backend
  template:
    metadata:
      labels:
        app: unode-backend
    spec:
      containers:
        - name: unode-backend
          image: mohitini8/unode-dev-api:0.6.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
