Deployments/unode-deployments/unode-backend/unode-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unode-backend-service
  namespace: default
  labels:
    app: unode-backend
spec:
  type: ClusterIP
  selector:
    app: unode-backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
