Deployments/unode-deployments/unode-backend/unode-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unode-backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: unode-beta-api.unification.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unode-backend-service
                port:
                  number: 80
